--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation("org.burnoutcrew.composereorderable:reorderable:0.9.0")
+    implementation "androidx.compose.foundation:foundation:1.4.3"
 
 }
