--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.2.0-alpha01'
     implementation 'androidx.compose.material3:material3-window-size-class:1.2.0-alpha01'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation 'org.burnoutcrew.composereorderable:reorderable:0.9.6'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
