--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ohana"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
         <activity
             android:name=".MainActivity"
             android:screenOrientation="locked"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Ohana">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
